Added temuring build & updated debian build. Re-organise/cleanup. Added hawtio compose-example.